--- a/src/assets/sass/pages/_gallery.scss
+++ b/src/assets/sass/pages/_gallery.scss
@@ -1,30 +1,44 @@
 .gallery {
   display: flex;
-  position: relative;
   .photo {
     height: 200px;
     width: 200px;
   }
-  .fullscreen-div {
-    .arrow-left {
-      &::before {
-        @include arrow($rotate: 140deg);
-        left: -35px;
+  &__fullscreen {
+    .fullscreen-div {
+      text-align: center;
+      position: relative;
+      .arrow-left {
+        &::before {
+          @include arrow($rotate: 140deg);
+          left: 430px;
+        }
       }
-    }
-    .arrow-right {
-      &::after {
-        @include arrow($rotate: -45deg);
-        right: -35px;
+      .arrow-right {
+        &::after {
+          @include arrow($rotate: -45deg);
+          right: 430px;
+        }
       }
-    }
-    top: 200px;
-    left: 250px;
-    position: absolute;
-    .fullscreen {
-      z-index: 999;
-      height: 700px;
-      width: 1000px;
+      .fullscreen {
+        z-index: 999;
+        height: 700px;
+        width: 1000px;
+      }
+      .before-img {
+        position: absolute;
+        width: 300px;
+        height: 300px;
+        top: 200px;
+        left: 50px;
+      }
+      .after-img {
+        position: absolute;
+        width: 300px;
+        height: 300px;
+        top: 200px;
+        right: 50px;
+      }
     }
   }
 }
